[FIX] footer alignment on mobile

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -2,15 +2,10 @@ $component: ".footer";
 
 #{$component} {
     display: flex;
-    flex-direction: column;
     align-items: center;
     border-top: 1px solid lightgray;
     margin-top: 1rem;
     padding: 1rem;
-
-    @media (min-width: $tablet) {
-        flex-direction: row;
-    }
 
     &__link {
         margin: 0.125rem 0.25rem;
